[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust_gpiozero = "0.2.0"
embedded-hal = "0.2.4"
i2cdev = "0.5.1"
mpu6050 = "0.1.5"
libm= "0.2.1"
nalgebra = "0.30.1"
linux-embedded-hal = "0.3.2"

[dev-dependencies]
i2cdev = "0.5.1"
